--- a/news.css
+++ b/news.css
@@ -78,7 +78,6 @@ ol{
 #container{
     margin-top: 20px;
     display: flex;
-    flex-wrap: wrap;
     align-items:flex-start;
     max-width: inherit;
 }
@@ -217,6 +216,10 @@ ol{
     }
     .maincon{
         padding-top: 0px;
+    }
+    #container{
+        display:flex;
+        flex-wrap:wrap;
     }
 }
 @media screen and (max-width: 600px) {
