--- a/news.css
+++ b/news.css
@@ -33,7 +33,8 @@ ol{
     display: block;
 }
 .head1{
-    font-family: Inter ExtraBold;
+    font-family: Inter;
+    font-weight:800;
     font-size: 47px;
     width: 250px;
     height: 160px;
